--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "build":"build index.js"
   },
   "author": "prathamesh",
   "license": "ISC",
